--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "mongoose": "^6.0.5",
     "nodemon": "^2.0.12"
   }
 }
