server activity log

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ip": "^1.1.5",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "mongoose": "^6.0.5",
+    "mongoose-activitylog": "^1.0.2",
     "nodemon": "^2.0.12"
   }
 }
