--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "jquery": "^3.6.0",
-    "leaflet": "^1.7.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "mongoose-activitylog": "^1.0.2",
     "nodemon": "^2.0.12"
